--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -289,14 +289,25 @@ function retrieveInfoDossier($segment, $dossierInfos, $odf = null) {
 		setVars($segment, $nomChamp, $valeurChamp);
 	}
 
-    //Generation du segment avis derogations
-	$segmentAvisDerogations = $segment->avisDerogations;
+    // Gestion des avis & dérogations
+    $segmentAvisDerogations = $segment->avisDerogations;
 
-	if (isset($dossierInfos["AVIS_DEROGATIONS"])) {
-		foreach ($dossierInfos["AVIS_DEROGATIONS"] as $val => $unAvisDerogation) {
-			setVars($segmentAvisDerogations, 'informationsAvisDerogations', $unAvisDerogation['INFORMATIONS']);
-			$segmentAvisDerogations->merge();
+    foreach ($dossierInfos["AVIS_DEROGATIONS"] as $avisDerogation) {
+        addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE_AVIS_DEROGATIONS']);
+        addChamp($segmentAvisDerogations, 'titre', $avisDerogation['TITRE']);
+        addChamp($segmentAvisDerogations, 'informations', $avisDerogation['INFORMATIONS']);
+        addChamp($segmentAvisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
+        addChamp($segmentAvisDerogations, 'identifiantdossierleve', $avisDerogation['ID_DOSSIER_LIE']);
+
+        if (true === boolval($avisDerogation['DISPLAY_HISTORIQUE'])) {
+            $avisDerogation['DISPLAY_HISTORIQUE'] = 'Oui';
+        } else {
+            $avisDerogation['DISPLAY_HISTORIQUE'] = 'Non';
         }
+
+        addChamp($segmentAvisDerogations, 'affichagehistorique', $avisDerogation['DISPLAY_HISTORIQUE']);
+
+        $segmentAvisDerogations->merge();
     }
 }
 
