--- a/application/views/scripts/dossier/results/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations.phtml
@@ -7,7 +7,7 @@
     <div class="row-fluid">
         <div class="span6">
             <!-- TODO Faire une table typeavisderogation ? -->
-            <p>Type : <?= $this->TYPE_AVIS_DEROGATIONS === 1 ? "Avis" : "Dérogation" ?></p>
+            <p>Type : <?= $this->TYPE ?></p>
             <p>Informations : <?= $this->INFORMATIONS ?>
             <p>Avis : <?= $this->LIBELLE_AVIS ?></p>
         </div>
