--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -6,11 +6,11 @@
     <div class="control-group">
         <label class="control-label" for="inputType">Type</label>
         <div class="controls">
-            <select name="TYPE_AVIS_DEROGATIONS" required="required">
-                <option value='<?= 1 ?>'>
+            <select name="TYPE" required>
+                <option value='Avis'>
                     Avis
                 </option>
-                <option value='<?= 2 ?>'>
+                <option value='Dérogation'>
                     Dérogation
                 </option>
             </select>
@@ -34,6 +34,7 @@
     <div class="control-group">
         <p class="control-label">Avis</p>
         <div class="controls">
+            <!-- FIXME Utiliser la jointure avec la table avis -->
             <select name="AVIS" class="span4">
                 <option value="1"> Favorable</option>
                 <option value="2"> Défavorable</option>
