--- a/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationconvoc.phtml
@@ -293,7 +293,7 @@ function retrieveInfoDossier($segment, $dossierInfos, $odf = null) {
     $segmentAvisDerogations = $segment->avisDerogations;
 
     foreach ($dossierInfos["AVIS_DEROGATIONS"] as $avisDerogation) {
-        addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE_AVIS_DEROGATIONS']);
+        addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE']);
         addChamp($segmentAvisDerogations, 'titre', $avisDerogation['TITRE']);
         addChamp($segmentAvisDerogations, 'informations', $avisDerogation['INFORMATIONS']);
         addChamp($segmentAvisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
