--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -141,7 +141,7 @@ foreach($this->membresFiles as $val => $membre){
                         $segmentAvisDerogations = $dossInfos->avisDerogations;
 
                         foreach ($dossierInfos["AVIS_DEROGATIONS"] as $avisDerogation) {
-                            addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE_AVIS_DEROGATIONS']);
+                            addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE']);
                             addChamp($segmentAvisDerogations, 'titre', $avisDerogation['TITRE']);
                             addChamp($segmentAvisDerogations, 'informations', $avisDerogation['INFORMATIONS']);
                             addChamp($segmentAvisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
