--- a/application/views/scripts/calendrier-des-commissions/generationodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationodj.phtml
@@ -240,7 +240,7 @@ function retrieveInfoDoss($segment, $dossierInfos) {
 	$segmentAvisDerogations = $segment->infosDoss->avisDerogations;
 
     foreach ($dossierInfos["AVIS_DEROGATIONS"] as $avisDerogation) {
-        addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE_AVIS_DEROGATIONS']);
+        addChamp($segmentAvisDerogations, 'type', $avisDerogation['TYPE']);
         addChamp($segmentAvisDerogations, 'titre', $avisDerogation['TITRE']);
         addChamp($segmentAvisDerogations, 'informations', $avisDerogation['INFORMATIONS']);
         addChamp($segmentAvisDerogations, 'avis', $avisDerogation['LIBELLE_AVIS']);
