Corrections sur l'affichage dans l'historique de l'établissement

--- a/application/views/scripts/etablissement/historique.phtml
+++ b/application/views/scripts/etablissement/historique.phtml
@@ -58,7 +58,7 @@
     ));
 ?>
 
-<h4>Avis et dérogations en vigueur :</h4>
+<h4>Avis et dérogations en vigueur</h4>
 <?php
     echo $this->partial("etablissement/partials/partial-historique-avisderogations.phtml", array(
         "array" => $this->historique["AVIS_DEROGATIONS"]
