--- a/application/views/scripts/etablissement/historique.phtml
+++ b/application/views/scripts/etablissement/historique.phtml
@@ -61,6 +61,6 @@
 <h4>Avis et dérogations en vigueur</h4>
 <?php
     echo $this->partial("etablissement/partials/partial-historique-avisderogations.phtml", array(
-        "array" => $this->historique["AVIS_DEROGATIONS"]
+        "array" => $this->historique["AVIS_DEROGATIONS"] ?? []
     ));
 ?>
