--- a/application/views/scripts/dossier/avis-et-derogations-edit.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations-edit.phtml
@@ -23,7 +23,7 @@
     <div class="control-group">
         <label class="control-label" for="inputTitre">Titre</label>
         <div class="controls">
-            <input name="TITRE" type="text" id="inputTitre" required value='<?= $this->avisDerogations['TITRE'] ?>'>
+            <input name="TITRE" type="text" id="inputTitre" required value='<?= htmlspecialchars($this->avisDerogations['TITRE'], ENT_QUOTES) ?>'>
         </div>
     </div>
 
