Évolution du descriptif de l'établissement (#27)
* Affichage des capsules des rubriques

* Ajout des rubriques en base de données

* Affichage des rubriques sauvegardées

* Suppression des rubriques

* Modification des informations d'une rubrique

* Ajout de champs sur une rubrique

* Modification d'un champ

* Suppression d'un champ

* Ajout ressource pour modification des formulaires

* Ajout / Modification / Suppression des valeurs sur le type liste

* Suppression champ en ajax

* Corrections sur l'affichage des valeurs de liste

* Suppression de toute la table si une seule ligne

* Suppression champ (l'autre c'était rubrique) ajax

* Ajout des rubriques en Ajax

* Ajout des champs en Ajax (manque les listes)

* Ajout des valeurs de liste en Ajax

* Simplification du JS

* Simplification JS Rubrique

* Meilleure répartition des éléments

* Insertion rubrique/champ dans un service

* Début d'affichage des informations

* Affichage formulaire modification des informations

* Ajout modification display rubrique par l'utilisateur

* Debug ajout des valeurs

* Correction de l'affichage des valeurs

* Affichage des informations saisies par l'utilisateur

* Corrections sur l'affichage du WYSIWYG

* Mise à jour des valeurs

* Correction d'affichage des checkbox

* Finalisation de la partie Modification

* Externalisation des fonctions dans un service

* Correction de la mise à jour des informations

* Simplification de fonctions

* php-cs-fixer

* Début utilisation partials

* Affichage d'un message si aucune valeur renseignée

* Ajout de partial loops

* Début ajout champ de fusion

* Amélioration récupération informations rubriques

* Amélioration de la lisibilité

* Fusion rubrique & champs simples

* Correction de typos

* Correction nom fichier avec point final

* Affichage global des rubriques fusion

* Renseignement des champs nécessaires uniquement

* Amélioration du desig

--- a/application/views/scripts/dossier/rapport.phtml
+++ b/application/views/scripts/dossier/rapport.phtml
@@ -150,11 +150,9 @@
     </div>
     <br/>
     <div class='row-flud'>
-        <input type='generate' class='btn btn-success' id='test' value='Génerer le(s) document(s)' >
+        <input type='generate' class='btn btn-success' id='test' value='Générer le(s) document(s)' >
     </div>
 </form>
-
-
 
 <script type="text/javascript">
     $(document).ready(function(){
@@ -194,10 +192,5 @@
                 }); 
             }
         });
-
     });
 </script>
-
-
-
-
