--- a/application/views/scripts/changement/index.phtml
+++ b/application/views/scripts/changement/index.phtml
@@ -1,4 +1,3 @@
-
 <form action="/changement" method="post">
     <div class='pull-right' >
         <input type='button' class="btn see-balises" value="Voir les balises disponibles">
@@ -18,6 +17,7 @@
 <script type='text/javascript'>
     tinymce.init({
         selector: '.tinyarea',
+        language: 'fr_FR',
         height: 150,
         menubar: false,
         statusbar: false,
