--- a/application/views/scripts/dossier/creationdoc.phtml
+++ b/application/views/scripts/dossier/creationdoc.phtml
@@ -3,10 +3,11 @@
 if (!function_exists('addChamp')) {
     function addChamp($odf,$nomOdf, $variable) {
         try{
-        if ($variable == "") {
-            $variable = "";
-        }
-        $odf->setVars($nomOdf,$variable, true,'UTF8');
+            if ($variable == "") {
+                $variable = "";
+            }
+            
+            $odf->setVars($nomOdf,$variable, true,'UTF8');
         } catch (Exception $e) {
 
         }
@@ -497,10 +498,52 @@ addChamp($odf, 'telPortMaitreOeuvre',$this->maiteOeuvre['TELPORTABLE_UTILISATEUR
 addChamp($odf, 'numFaxMaitreOeuvre',$this->maiteOeuvre['TELFAX_UTILISATEURINFORMATIONS']);
 addChamp($odf, 'societeMaitreOeuvre',$this->maiteOeuvre['SOCIETE_UTILISATEURINFORMATIONS']);
 
-//Descriptif de l'établissement
-addChamp($odf, 'historiqueDescriptifEtab',$this->etabDesc['DESCRIPTIF_HISTORIQUE_ETABLISSEMENT']);
-addChamp($odf, 'descriptifEtab',$this->etabDesc['DESCRIPTIF_ETABLISSEMENT']);
-addChamp($odf, 'derogAccEtab',$this->etabDesc['DESCRIPTIF_DEROGATIONS_ETABLISSEMENT']);
+if ($this->isDescriptifPersonnalise === true) {
+    // Descriptif personnalisé de l'établissement
+    $serviceUtils = new Service_Utils();
+
+    // Permet d'avoir les informations unitairement
+    foreach ($this->rubriques as $rubrique) {
+        addChamp(
+            $odf,
+            $serviceUtils->getFullFusionName(
+                'descriptif_etablissement',
+                [
+                    $rubrique['NOM']
+                ]
+            ),
+            $rubrique['NOM']
+        );
+
+        foreach ($rubrique['CHAMPS'] as $champ) {
+            // Définition du libellé pour les cases à cocher
+            if ('Case à cocher' === $champ['TYPE']) {
+                if (true === boolval($champ['VALEUR'])) {
+                    $champ['VALEUR'] = 'Oui';
+                } else {
+                    $champ['VALEUR'] = 'Non';
+                }
+            }
+
+            addChamp(
+                $odf,
+                $serviceUtils->getFullFusionName(
+                    'descriptif_etablissement',
+                    [
+                        $rubrique['NOM'],
+                        $champ['NOM']
+                    ]
+                ),
+                $champ['VALEUR']
+            );
+        }
+    }
+} else {
+    // Descriptif standard de l'établissement
+    addChamp($odf, 'historiqueDescriptifEtab',$this->etabDesc['DESCRIPTIF_HISTORIQUE_ETABLISSEMENT']);
+    addChamp($odf, 'descriptifEtab',$this->etabDesc['DESCRIPTIF_ETABLISSEMENT']);
+    addChamp($odf, 'derogAccEtab',$this->etabDesc['DESCRIPTIF_DEROGATIONS_ETABLISSEMENT']);
+}
 
 //Implantation
 addChamp($odf, 'surfaceEmpriseSol',$this->etabDesc['DESCTECH_IMPLANTATION_SURFACE_ETABLISSEMENT']);
