--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -37,10 +37,10 @@
         <?php endif ?>
 
         <?php if ($this->idTypeDossier === 1): ?>
-            <li class = <?= $this->action == "docconsulte" ? "active" : "" ?>>
-                <a href= <?= $this->url(array("controller" => "dossier", "action"=>"docconsulte", "id" => $this->idDossier), false, true) ?>>
+            <li class = <?= $this->action == "verifications-techniques" ? "active" : "" ?>>
+                <a href= <?= $this->url(array("controller" => "dossier", "action"=>"verifications-techniques", "id" => $this->idDossier), false, true) ?>>
                     <i class="icon-file icon-black"></i>
-                    Vérification technique
+                    Vérifications techniques
                 </a>
             </li>
         <?php endif ?>
